--- a/style.css
+++ b/style.css
@@ -1,123 +1,65 @@
 /* Global styles */
 body {
-    font-family: 'Roboto', sans-serif; /* Custom font from Google Fonts */
-    background-color: #f5f5f5;
-    color: #333333;
-    margin: 0;
-    padding: 0;
-  }
-  
-  /* Header styles */
-  header {
-    background-color: #333333;
-    color: #ffffff;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 10px 20px;
-  }
-  
-  h1 {
-    margin: 0;
-    font-size: 32px;
-    font-weight: bold;
-  }
-  
-  nav ul {
-    list-style: none;
-    margin: 0;
-    padding: 0;
-    display: flex;
-  }
-  
-  nav li {
-    margin: 0 10px;
-  }
-  
-  nav a {
-    color: #ffffff;
-    text-decoration: none;
-  }
-  
-  nav a:hover {
-    text-decoration: underline;
-  }
-  
-  /* Main styles */
-  main {
-    margin: 20px;
-  }
-  
-  h2 {
-    color: #333333;
-    font-size: 24px;
-    margin-bottom: 20px;
-  }
-  
-  p {
-    line-height: 1.5;
-  }
-  
-  /* Footer styles */
-  footer {
-    background-color: #333333;
-    color: #ffffff;
-    text-align: center;
-    padding: 10px;
-  }
-  
-  /* Links styles */
-  a {
-    color: #336699;
-  }
-  
-  a:hover {
-    color: #204d74;
-  }
-  
-  .carousel-container {
-    width: 500px;
-    height: 300px;
-    position: relative;
-    overflow: hidden;
-  }
-  
-  .carousel-slide {
-    width: 500px;
-    height: 300px;
-    position: absolute;
-    top: 0;
-    left: 0;
-    opacity: 0;
-    transition: opacity 1s ease-in-out;
-  }
-  
-  .carousel-slide.active {
-    opacity: 1;
-  }
-  
-  #prevBtn,
-  #nextBtn {
-    position: absolute;
-    top: 50%;
-    transform: translateY(-50%);
-    background-color: transparent;
-    border: none;
-    font-size: 24px;
-    color: #fff;
-    cursor: pointer;
-  }
-  
-  #prevBtn {
-    left: 0;
-  }
-  
-  #nextBtn {
-    right: 0;
-  }
-  
+  font-family: 'Roboto', sans-serif;
+  background-color: #f5f5f5;
+  color: #333;
+  margin: 0;
+  padding: 0;
+}
 
+/* Header styles */
+header {
+  background-color: #333;
+  color: #fff;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 10px 20px;
+}
 
-  /* Custom font styles */
-  @import url('https://fonts.googleapis.com/css?family=Roboto:400,700&display=swap');
-  
+h1 {
+  margin: 0;
+  font-size: 32px;
+  font-weight: bold;
+}
+
+nav ul {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+  display: flex;
+}
+
+nav li {
+  margin: 0 10px;
+}
+
+nav a {
+  color: #fff;
+  text-decoration: none;
+}
+
+nav a:hover {
+  text-decoration: underline;
+}
+
+/* Main styles */
+main {
+  margin: 20px;
+}
+
+h2 {
+  color: #333;
+  font-size: 24px;
+  margin-bottom: 20px;
+}
+
+p {
+  line-height: 1.5;
+}
+
+/* Footer styles */
+footer {
+  background-color: #333;
+  color: #fff;
+ 
